--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "echarts": "^4.9.0",
+    "element-ui": "^2.15.9",
+    "install": "^0.13.0",
+    "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1",
+    "less": "^4.1.3",
+    "less-loader": "^6.0.0",
+    "mockjs": "^1.1.0",
+    "npm": "^8.17.0",
+    "nprogress": "^0.2.0",
+    "particles.js": "^2.0.0",
+    "vue": "^2.6.14",
+    "vue-baidu-map": "^0.21.22",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
